css/main.css
*{
    padding:0;
    margin:0;
    scrollbar-color:white #1a1a1a;
    scrollbar-width:thin;
}
html{
    scroll-behavior: smooth;
    z-index: -1002;
}
::-webkit-scrollbar {
    width: 6px;
}
::-webkit-scrollbar-track {
    background:#1a1a1a;
}
::-webkit-scrollbar-thumb {
    background: white; 
}
body{
    background:black;
    color:white;
    z-index: -1001;
}
.header{
    width:100%;
    height:100%;
}
#title{
    color:#02897e;
    position: absolute;
    top:42.5%;
    transform:translate(0,-50%);
    font-family: Pixel;
    font-size: 6vw;
    margin-top:2.5rem;
    width:100%;
    word-wrap:break-word;
    text-align: center;
    cursor:default;
    animation:flash 30s alternate ease-in-out;
    animation-iteration-count: infinite;
}
.mainLink{
    position:absolute;
    bottom:7rem;
    color:white;
    text-decoration: underline;
    font-family: pixel;
    font-size: 2rem;
    min-width: max-content;
}
.mainLinkTop{
    position:absolute;
    top:7rem;
    color:white;
    text-decoration: underline;
    font-family: pixel;
    font-size: 2rem;
    min-width: max-content;
}
#mainLinkLeft{
    left:5rem;
}
#mainLinkTopRight{
    right:5rem;
}
#mainLinkCentre{
    right:25rem;
}
#mainLinkRight{
    right:5rem;
}
#mainLinkBlog{
    left:50%;
    transform:translateX(-50%);
}
#arrowCont{
    cursor:pointer;
    font-size: 2rem;
    z-index: 1;
    position: absolute;
    left:50%;
    transform: translate(-50%);
    bottom:3rem;
    width: 15rem;
    text-align: center;
}
#arrowCont p{
    width:100%;
    text-align: center;
    font-family: Pixel;
    animation:bounce 2s;
    animation-iteration-count: infinite;
}
#ban1{
    top:0;
}
#ban2{
    bottom:0;
}
#ban1,#ban2{
    transition: 1s;
    overflow: hidden;
    font-family:Pixel;
    min-width:100%;
    background:black;
    z-index: 1;
    height:2.5rem;
    line-height: 2.5rem;
    font-size: 2rem;
    /* border-top: 1px solid white; */
    /* border-bottom: 1px solid white; */
    position: fixed;    
}
.move{
    position: relative;
    top:0;
    z-index: -1000;
}
main{
    margin-top:100vh;
    position: relative;
}
a{
    text-decoration: none;
}
.aligncentre {
    text-align: center;
}
.blog{
    font-family: sans-serif;
    max-width:100%;
    margin:auto;
    padding:.5rem;
    margin-bottom:2rem;
    z-index:0;
    text-align: left;
    width:60rem;
    margin: 1.5rem auto;
}
.blog h1{
    font-family: Pixel;
    font-size: 2rem;
    left:0%;
}
#hlink{
    color: white;
    text-decoration: underline;
    font-size: 1.25rem;
    font-family: Pixel;
}
#hlinkbig{
    color: white;
    text-decoration: underline;
    font-size: 1.5rem;
    font-family: Pixel;
}
#abs{
    color: white;
    font-size: 1.25rem;
}
.blog a{
    color: white;
    text-decoration: underline;
}
.blog p{
    font-size: 1.25rem;
    left:0%;
    height:auto;
    margin: 1.5rem auto;
    color:#cccccc;
}
.projInfo{
    display:flex;
    align-items: center;
    justify-content: space-around;
    margin:0 10%;
}
#aboutMe .projInfo{
    display:flex;
    align-items: center;
    justify-content: center !important;
}
.proj{
    /* border-top: 10px solid; */
    font-family: sans-serif;
    margin:auto;
    padding:.5rem;
    margin-bottom:5rem;
    z-index:0;
}
.proj h1{
    font-family: Pixel;
    margin:1.5rem;
    font-size: 3rem;
    text-align: center;
    animation:flash 30s alternate ease-in-out;
    animation-iteration-count: infinite;
    animation-delay: -.5s;
}
.proj a{
    color: white;
    text-decoration: underline;
}
.projImg{
    max-width:40%;
}
.gitLink,.arxivLink,.blogLink{
    width:3rem;
    position: relative;
    bottom:-1rem;
}
.gitLinkMul{
    left:rem;
}
.arxivLink{
    right:5rem;
}
.blogLink{
    left:5rem;
}
.gitImg,.arxivImg,.blogImg{
    height:2.5rem;
}
.pCont{
    font-size: 1.5rem;
    left:0;
    top:40%;
    width:50%;
    height:auto;
    color:#cccccc;
    text-align: center;
}
.proj:nth-last-child(1){
    margin-bottom:5rem;
}
/* 
 * More than 1600px 
 */
@media screen and (min-width:1600px){
    .proj{
        border-width: 20px;
        display:block;
        position: relative;
    }
    .pCont p{
        font-size: 1.75rem;
    }
    

} 
/*
banner is auto width after certain length
banner is fixed width before certain length (REM)
*/
@font-face{
    font-family: Pixel;
    src:url(../font/Pixellari.ttf);
}
@font-face{
    font-family: VCR;
    src:url(../font/VCR_OSD_MONO_1.001.ttf);
}
@keyframes flash{
    0%{color:#02897e;}
    20%{color:aqua;}
    40%{color:#77ff77;}
    60%{color:#ff6961;}
    80%{color:#fc107f;}
    100%{color:#b92e34;}
}
@keyframes backgroundFlash{
    0%{background:#02897e;}
    20%{background:aqua;}
    40%{background:#77ff77;}
    60%{background:#ff6961;}
    80%{background:#fc107f;}
    100%{background:#b92e34;}
}
@keyframes bounce{
    0%   { transform: scale(1,1)      translateY(0); }
    10%  { transform: scale(.95,1.05)   translateY(0); }
    30%  { transform: scale(1.05,.95)   translateY(-10px); }
    50%  { transform: scale(1,1.05) translateY(0); }
    57%  { transform: scale(1,1)      translateY(0); }
    64%  { transform: scale(1,1)      translateY(0); }
    100% { transform: scale(1,1)      translateY(0); }
}
@keyframes scroll{
    from {left:-400px}
    to{left:200px}
}

footer {
    background: black;
    padding: 2rem 0 5rem 0;
    margin-top: 5rem;
}

.footer-content {
    display: flex;
    justify-content: center;
    width: 100%;
}

.footer-gifs {
    width: 100%;
    overflow: hidden;
    display: flex;
    gap: 2rem;
    justify-content: center;
}

.footer-gif {
    height: 6vw;
    min-height: 16px; /* Won't get smaller than this */
    max-height: 32px; /* Won't get smaller than this */
}

#float-container {
    top: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    position: absolute;
    height: 200%;
}

.floater {
    position: absolute;
    width: 100px;
    height: 100px;
}

.floater img {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

@keyframes fly-rotate {
    from {
        transform: translate(0, 0) rotate(var(--start-rotation));
        opacity: 1;
    }
    to {
        transform: translate(-120vw, 30vh) rotate(var(--end-rotation));
        opacity: 0;
    }
}

@keyframes fly-straight {
    from {
        transform: translate(0, 0);
        opacity: 1;
    }
    to {
        transform: translate(-120vw, 30vh);
        opacity: 0;
    }
}

.konami-floater {
    position: absolute;
    width: 100px;
    height: 100px;
    animation: konami-float 10s linear forwards;
}

@keyframes konami-float {
    0% {
        transform: translate(0, -100%) rotate(0deg);
        opacity: 1;
    }
    100% {
        transform: translate(-50vw, 100vh) rotate(720deg);
        opacity: 0;
    }
}

@keyframes konamiFlash {
    0% { color: #77ff77; }
    20% { color: #ff6961; }
    40% { color: #fc107f; }
    60% { color: #02897e; }
    80% { color: aqua; }
    100% { color: white; }
}

.doom-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: black;
    background-image: url('../img/doom-bg.jpg');
    background-repeat: repeat;
    z-index: 9999;
    display: flex;
    justify-content: center;
    align-items: center;
}

.doom-message {
    font-family: 'VCR';
    font-size: 2.5vw;  /* Scale directly with viewport width */
    text-align: left;
    white-space: pre-line;
    padding-left: 10rem;
    width: 90%;
    max-width: 1000px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.doom-text-line {
    color: #FF0000;
    text-shadow:
        3px 3px 0 #800000,
        -3px -3px 0 #800000,
        3px -3px 0 #800000,
        -3px 3px 0 #800000;
    font-weight: bold;
    visibility: hidden;
    margin-bottom: 0.5rem;
    line-height: 1.4;
}

.doom-char {
    display: inline-block;
    visibility: visible;
}

